Alternator, Multiplicator are finished, lockList concurrent modification, passes Test_interrupt