@@ -7,6 +7,13 @@ import java.util.*;
 
 public class Main {
 
+    /**
+     * Solution is based on inheriting the critical section.
+     * In the beginning only Thread A can fire, then it gives the
+     * Critical Section to B, which gives it to C, afterwards.
+     * On ending protocol, the critical section is transferred between two threads.
+     */
+
     private static class FireThread extends Thread {
         private PetriNet<Place> net;
         private Collection<Transition<Place>> transitions;
@@ -18,31 +25,26 @@ public class Main {
 
         @Override
         public void run() {
-            while (true) {
-                try {
+            try {
+                while (true) {
                     this.net.fire(this.transitions);
+
                     if (this.net.getInitialMarking().get(Place.CS) == 1) {
                         System.out.print(Thread.currentThread().getName() + ".");
+//                        sleep(500);
                     }
+
                     this.net.fire(this.transitions);
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
                 }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
             }
+
         }
     }
 
-    /**
-     * A, B, C are the threads.
-     * S is semaphore.
-     * CS is the critical Section.
-     * <p>
-     * LBC, LAC and LAB used to ensure that n
-     * one of the threads will enter twice in a row.
-     * Link to Visualization:
-     */
     private enum Place {
-        A, B, C, CS
+        A, B, C, CS, ACS, BCS, CCS
     }
 
     private static <T> void putPositive(Map<T, Integer> map, T key, Integer value) {
@@ -59,7 +61,9 @@ public class Main {
         putPositive(result, Place.B, 1);
         putPositive(result, Place.C, 1);
         putPositive(result, Place.CS, 0);
-
+        putPositive(result, Place.ACS, 0);
+        putPositive(result, Place.BCS, 0);
+        putPositive(result, Place.CCS, 0);
 
         return result;
     }
@@ -68,16 +72,62 @@ public class Main {
         Map<Place, Integer> initialMarking = marking();
         PetriNet<Place> alternatorNet = new PetriNet<>(initialMarking, true);
 
-        // ..........................................
+        //--------------------------------------------------------------------------
 
-        Collection<Transition<Place>> allTransitions = new HashSet<>(Arrays.asList(...));
+        Map<Place, Integer> trAinInput = Map.of(Place.A, 1);
+        Set<Place> trAinInhibitor = Set.of(Place.CS);
+        Map<Place, Integer> trAinOutput = Map.of(Place.CS, 1, Place.ACS, 1);
+        Transition<Place> trAin = new Transition<>(trAinInput, null, trAinInhibitor, trAinOutput);
+
+        Map<Place, Integer> trAoutInput = Map.of(Place.ACS, 1, Place.CS, 1);
+        Set<Place> trAoutReset = Set.of(Place.B, Place.C);
+        Map<Place, Integer> trAoutOutput = Map.of(Place.B, 1, Place.C, 1);
+        Transition<Place> trAout = new Transition<>(trAoutInput, trAoutReset, null, trAoutOutput);
+
+        //--------------------------------------------------------------------------
+
+        Map<Place, Integer> trBinInput = Map.of(Place.B, 1);
+        Set<Place> trBinInhibitor = Set.of(Place.CS);
+        Map<Place, Integer> trBinOutput = Map.of(Place.CS, 1, Place.BCS, 1);
+        Transition<Place> trBin = new Transition<>(trBinInput, null, trBinInhibitor, trBinOutput);
+
+        Map<Place, Integer> trBoutInput = Map.of(Place.BCS, 1, Place.CS, 1);
+        Set<Place> trBoutReset = Set.of(Place.A, Place.C);
+        Map<Place, Integer> trBoutOutput = Map.of(Place.A, 1, Place.C, 1);
+        Transition<Place> trBout = new Transition<>(trBoutInput, trBoutReset, null, trBoutOutput);
+
+        //--------------------------------------------------------------------------
+
+        Map<Place, Integer> trCinInput = Map.of(Place.C, 1);
+        Set<Place> trCinInhibitor = Set.of(Place.CS);
+        Map<Place, Integer> trCinOutput = Map.of(Place.CS, 1, Place.CCS, 1);
+        Transition<Place> trCin = new Transition<>(trCinInput, null, trCinInhibitor, trCinOutput);
+
+        Map<Place, Integer> trCoutInput = Map.of(Place.CCS, 1, Place.CS, 1);
+        Set<Place> trCoutReset = Set.of(Place.A, Place.B);
+        Map<Place, Integer> trCoutOutput = Map.of(Place.A, 1, Place.B, 1);
+        Transition<Place> trCout = new Transition<>(trCoutInput, trCoutReset, null, trCoutOutput);
+
+        //--------------------------------------------------------------------------
+
+        // Collection of transitions for each thread.
+        Collection<Transition<Place>> threadATransitions = new HashSet<>(Arrays.asList(trAin, trAout));
+        Collection<Transition<Place>> threadBTransitions = new HashSet<>(Arrays.asList(trBin, trBout));
+        Collection<Transition<Place>> threadCTransitions = new HashSet<>(Arrays.asList(trCin, trCout));
+
+        Collection<Transition<Place>> allTransitions = new HashSet<>();
+        allTransitions.addAll(threadATransitions);
+        allTransitions.addAll(threadBTransitions);
+        allTransitions.addAll(threadCTransitions);
+
         Set<Map<Place, Integer>> toCheck = alternatorNet.reachable(allTransitions);
 
         // Writes count of  reachable markings from initial state.
         System.out.println(toCheck.size());
 
-        System.out.println(toCheck);
-
+        /**
+         * Checks for mutual exclusion. If not true returns with exit code 7.
+         */
         for (Map<Place, Integer> m : toCheck) {
             if (m.containsValue(2)) {
                 // Only Critical Section has more than one input arc, so if there is value 2 in map then solution is wrong.
@@ -86,25 +136,25 @@ public class Main {
             }
         }
 
-//        Thread threadA = new FireThread(alternatorNet, threadAtransitions);
-//        threadA.setName("A");
-//        Thread threadB = new FireThread(alternatorNet, threadBtransitions);
-//        threadB.setName("B");
-//        Thread threadC = new FireThread(alternatorNet, threadCtransitions);
-//        threadC.setName("C");
-//
-//        threadA.start();
-//        threadB.start();
-//        threadC.start();
-//
-//        try {
-//            // Main Thread sleeps 30 seconds.
-//            Thread.sleep(30000);
-//            threadA.interrupt();
-//            threadB.interrupt();
-//            threadC.interrupt();
-//        } catch (InterruptedException e) {
-//            e.printStackTrace();
-//        }
+        Thread threadA = new FireThread(alternatorNet, threadATransitions);
+        threadA.setName("A");
+        Thread threadB = new FireThread(alternatorNet, threadBTransitions);
+        threadB.setName("B");
+        Thread threadC = new FireThread(alternatorNet, threadCTransitions);
+        threadC.setName("C");
+
+        threadA.start();
+        threadB.start();
+        threadC.start();
+
+        try {
+            // Main Thread sleeps 30 seconds.
+            Thread.sleep(30000);
+            threadA.interrupt();
+            threadB.interrupt();
+            threadC.interrupt();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
     }
 }
